fixed slider and clearfix still need to work on smaller screens

--- a/less/pages/front-page.less
+++ b/less/pages/front-page.less
@@ -1,8 +1,10 @@
 @import '../base/variables.less';
 
 .first-page-slide {
-	width: 1400px;
-	height: 1050px;
+//	width: 1400px;
+//	height: 1050px;
+	width: 100%;
+	max-height: 100vh;
 }
 
 .section-main {
